--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,16 @@ a {
 .shadow {
   filter: drop-shadow(0px 4px 14px rgba(0, 0, 0, 0.25));
 }
+
+/* Overwrite the default to keep the scrollbar always visible */
+
+::-webkit-scrollbar {
+ -webkit-appearance: none;
+ width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+ border-radius: 4px;
+ background-color: rgb(110, 110, 110);
+ -webkit-box-shadow: 0 0 1px rgb(138, 138, 138);
+}
